--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li onclick="newNote()"><abbr title="Add New"><img src="./icons/plus.svg" alt="Add New"></abbr></li>
-                <li><abbr title="Delete All"><img class="delete" src="./icons/delete.svg" alt="Delete All"></abbr></li>
+                <li id="deleteAll"><abbr title="Delete All"><img class="delete" src="./icons/delete.svg" alt="Delete All"></abbr></li>
             </ul>
 
             <div class="search">
@@ -30,10 +30,12 @@
         <div class="asideHead">
             <abbr title="Close"><img onclick="closeNewNote()" src="./icons/close.svg" alt="Close new note"></abbr>
         </div>
-        <form onsubmit="return submitData()">
-            <input id="title" type="text" placeholder="Title" maxlength="75" required>
+
+        <!-- onsubmit="return submitData()" -->
+        <form id="noteForm">
+            <input id="title" name="title" type="text" placeholder="Title" maxlength="75" required>
             <br>
-            <textarea id="description" cols="35" rows="15" placeholder="Description" required></textarea>
+            <textarea id="description" name="description" cols="35" rows="15" placeholder="Description" required></textarea>
             <br>
             <button type="submit" onclick="asideIn()">Submit</button>
             <button type="reset">Reset</button>
