--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul>
-                <li onclick="newNote()"><abbr title="Add New"><img src="./icons/plus.svg" alt="Add New"></abbr></li>
+                <li onclick="newNote()"><abbr title="Add Note"><img src="./icons/plus.svg" alt="Add New"></abbr></li>
                 <li id="deleteAll"><abbr title="Delete All"><img class="delete" src="./icons/delete.svg" alt="Delete All"></abbr></li>
             </ul>
 
@@ -42,40 +42,11 @@
         </form>
     </aside>
 
-
-
-
-
     <!-- Notes -->
     <section id="section">
 
 
     </section>
-
-
-
-
-
-
-
-    <!-- <article>
-            <div class="tools">
-                <abbr title="Edit"><img src="./icons/edit.svg" alt="Edit note"></abbr>
-                <abbr title="Delete"><img src="./icons/trash.svg" alt="Delete note"></abbr>
-            </div>
-
-            <h3 class="noteTitle"></h3>
-            <p class="noteDescription"></p>
-        </article> -->
-
-
-    <!-- Footer -->
-    <!-- <footer>
-        <p>&copy; 2022 ABUZARHAIDER</p>
-        <abbr title="Scroll to Top"><a href="#"><img src="./icons/scrollToTop.svg" alt="Scroll to top"></a></abbr>
-    </footer> -->
-
-
 
 
     <!-- JS -->
