--- a/index.html
+++ b/index.html
@@ -12,28 +12,31 @@
 
 <body>
     <header>
-        <nav>
+        <nav id="navBar">
             <ul>
-                <li onclick="newNote()"><abbr title="Add Note"><img src="./icons/plus.svg" alt="Add New"></abbr></li>
-                <li id="deleteAll"><abbr title="Delete All"><img class="delete" src="./icons/delete.svg" alt="Delete All"></abbr></li>
+                <li onclick="newNote()" name="unique"><abbr title="Add Note"><img name="unique" src="./icons/plus.svg"
+                            alt="Add New"></abbr></li>
+                <li id="deleteAll"><abbr title="Delete All"><img class="delete" src="./icons/delete.svg"
+                            alt="Delete All"></abbr></li>
             </ul>
         </nav>
     </header>
 
     <!-- New Note aside -->
-    <aside class="asideNoteDiv">
-        <div class="asideHead">
+    <aside class="asideNoteDiv" name="unique">
+        <div class="asideHead" name="unique">
             <abbr title="Close"><img onclick="closeNewNote()" src="./icons/close.svg" alt="Close new note"></abbr>
         </div>
 
         <!-- onsubmit="return submitData()" -->
-        <form id="noteForm">
-            <input id="title" name="title" type="text" placeholder="Title" maxlength="75" required>
+        <form id="noteForm" name="unique">
+            <input id="title" name="unique" name="title" type="text" placeholder="Title" maxlength="75" required>
             <br>
-            <textarea id="description" name="description" cols="35" rows="15" placeholder="Description" required></textarea>
+            <textarea id="description" name="unique" name="description" cols="35" rows="15" placeholder="Description"
+                required></textarea>
             <br>
-            <button type="submit" onclick="asideIn()">Submit</button>
-            <button type="reset">Reset</button>
+            <button type="submit" name="unique" onclick="asideIn()">Submit</button>
+            <button type="reset" name="unique">Reset</button>
         </form>
     </aside>
 
